--- a/portfolio/portfolio/unit_test/unit_test_log.html
+++ b/portfolio/portfolio/unit_test/unit_test_log.html
@@ -62,58 +62,70 @@ and line number, and then trace the source of the failure. This must
 also be recorded in your defect tracking. </td>
     </tr>
     <tr>
-      <td style="vertical-align: top;">...<br>
+      <td style="vertical-align: top;">HallButtonControl<br>
       </td>
-      <td style="vertical-align: top;"><br>
+      <td style="vertical-align: top;"><a href="hallbuttoncontrol.cf">hallbuttoncontrol.cf</a></td>
+      <td style="vertical-align: top;"><a href="hallbuttoncontrol_test1.mf">hallbuttoncontrol_test1.mf</a></td>
+      <td style="vertical-align: top;">State numbers /
+transition numbers<br>
       </td>
-      <td style="vertical-align: top;"><br>
+      <td style="vertical-align: top;">X<br>
       </td>
-      <td style="vertical-align: top;"><br>
+      <td style="vertical-align: top;">X<br>
       </td>
-      <td style="vertical-align: top;"><br>
+      <td style="vertical-align: top;"><a href="hallbuttoncontrol_test1.stats">hallbuttoncontrol_test1.stats</a><br>
       </td>
-      <td style="vertical-align: top;"><br>
-      </td>
-      <td style="vertical-align: top;"><br>
-      </td>
-      <td style="vertical-align: top;"><br>
-      </td>
+      <td style="vertical-align: top;">If you failed the test (one or
+more failed assertions), list the
+source of the failure:
+whether the test is buggy, the implementation is wrong, or the design
+is flawed. If the error is in the implementation, give the file name
+and line number, and then trace the source of the failure. This must
+also be recorded in your defect tracking. </td>
     </tr>
     <tr>
-      <td style="vertical-align: top;"><br>
+      <td style="vertical-align: top;">DriveControl<br>
       </td>
-      <td style="vertical-align: top;"><br>
+      <td style="vertical-align: top;"><a href="drivecontrol.cf">drivecontrol.cf</a></td>
+      <td style="vertical-align: top;"><a href="drivecontrol_test1.mf">drivecontrol_test1.mf</a></td>
+      <td style="vertical-align: top;">State numbers /
+transition numbers<br>
       </td>
-      <td style="vertical-align: top;"><br>
+      <td style="vertical-align: top;">X<br>
       </td>
-      <td style="vertical-align: top;"><br>
+      <td style="vertical-align: top;">X<br>
       </td>
-      <td style="vertical-align: top;"><br>
+      <td style="vertical-align: top;"><a href="drivecontrol_test1.stats">drivecontrol_test1.stats</a><br>
       </td>
-      <td style="vertical-align: top;"><br>
-      </td>
-      <td style="vertical-align: top;"><br>
-      </td>
-      <td style="vertical-align: top;"><br>
-      </td>
+      <td style="vertical-align: top;">If you failed the test (one or
+more failed assertions), list the
+source of the failure:
+whether the test is buggy, the implementation is wrong, or the design
+is flawed. If the error is in the implementation, give the file name
+and line number, and then trace the source of the failure. This must
+also be recorded in your defect tracking. </td>
     </tr>
     <tr>
-      <td style="vertical-align: top;"><br>
+      <td style="vertical-align: top;">CarButtonControl<br>
       </td>
-      <td style="vertical-align: top;"><br>
+      <td style="vertical-align: top;"><a href="carbuttoncontrol.cf">carbuttoncontrol.cf</a></td>
+      <td style="vertical-align: top;"><a href="carbuttoncontrol_test1.mf">carbuttoncontrol_test1.mf</a></td>
+      <td style="vertical-align: top;">State numbers /
+transition numbers<br>
       </td>
-      <td style="vertical-align: top;"><br>
+      <td style="vertical-align: top;">X<br>
       </td>
-      <td style="vertical-align: top;"><br>
+      <td style="vertical-align: top;">X<br>
       </td>
-      <td style="vertical-align: top;"><br>
+      <td style="vertical-align: top;"><a href="carbuttoncontrol_test1.stats">carbuttoncontrol_test1.stats</a><br>
       </td>
-      <td style="vertical-align: top;"><br>
-      </td>
-      <td style="vertical-align: top;"><br>
-      </td>
-      <td style="vertical-align: top;"><br>
-      </td>
+      <td style="vertical-align: top;">If you failed the test (one or
+more failed assertions), list the
+source of the failure:
+whether the test is buggy, the implementation is wrong, or the design
+is flawed. If the error is in the implementation, give the file name
+and line number, and then trace the source of the failure. This must
+also be recorded in your defect tracking. </td>
     </tr>
     <tr>
       <td style="vertical-align: top;"><br>
