--- a/portfolio/portfolio/traceability/sc_code.html
+++ b/portfolio/portfolio/traceability/sc_code.html
@@ -14,12 +14,73 @@ This document shows where each transition described in the controller
 statecharts is implemented in the code.<br>
 <br>
 <h2>DoorControl</h2>
-Author Name:&nbsp; &lt;Name (andrewID)&gt;<br>
-Traceability peformed by:&nbsp; &lt;Name (andrewID)&gt;<br>
-&lt;Line number&gt; &nbsp; &lt;Transition Number&gt;<br>
-...<br>
+Author Name:&nbsp; &lt;Qiang Zhang (qiangz)&gt;<br>
+Traceability peformed by:&nbsp; &lt;Shen Yu (sheny)&gt;<br>
+<!--Table for DoorControl Qiang-->
+<table style="width: 400px; height: 100px;" border="1" cellpadding="3" frame="border">
+    <tbody>
+        <tr>
+            <td style="vertical-align: top;">Line Number<br>
+            </td>
+            <td style="vertical-aligh: top;">Transition Number<br>
+            </td>
+        </tr>
+        <tr>
+            <td style="vertical-align: top;">104<br>
+            </td>
+            <td style="vertical-aligh: top;">T 5.1<br>
+            </td>
+        </tr>
+        <tr>
+            <td style="vertical-align: top;">111<br>
+            </td>
+            <td style="vertical-aligh: top;">T 5.5<br>
+            </td>
+        </tr>
+        <tr>
+            <td style="vertical-align: top;">121<br>
+            </td>
+            <td style="vertical-aligh: top;">T 5.2<br>
+            </td>
+        </tr>
+        <tr>
+            <td style="vertical-align: top;">134<br>
+            </td>
+            <td style="vertical-aligh: top;">T 5.3<br>
+            </td>
+        </tr>
+        <tr>
+            <td style="vertical-align: top;">142<br>
+            </td>
+            <td style="vertical-aligh: top;">T 5.4<br>
+            </td>
+        </tr>
+        <tr>
+            <td style="vertical-align: top;">146<br>
+            </td>
+            <td style="vertical-aligh: top;">T 5.5<br>
+            </td>
+        </tr>
+    </tbody>
+</table>
+<!--DoorControl End-->
+
 <span style="font-weight: bold;"><br>
 </span>&lt;Fill in the rest of the controllers&gt;<br>
 <br>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
