--- a/portfolio/portfolio/traceability/sc_code.html
+++ b/portfolio/portfolio/traceability/sc_code.html
@@ -64,7 +64,61 @@ Traceability peformed by:&nbsp; &lt;Shen Yu (sheny)&gt;<br>
     </tbody>
 </table>
 <!--DoorControl End-->
+<h2>HallButtonControl</h2>
+Author Name:&nbsp; &lt;Xianle Wang(xianlew)&gt;<br>
+Traceability peformed by:&nbsp; &lt;Jiang He(jiangh)&gt;<br>
+<!--Table for HallButtonControl -->
+<table style="width: 400px; height: 100px;" border="1" cellpadding="3" frame="border">
+    <tbody>
+        <tr>
+            <td style="vertical-align: top;">Line Number<br>
+            </td>
+            <td style="vertical-aligh: top;">Transition Number<br>
+            </td>
+        </tr>
+        <tr>
+            <td style="vertical-align: top;">254<br>
+            </td>
+            <td style="vertical-aligh: top;">T 8.1<br>
+            </td>
+        </tr>
+        <tr>
+            <td style="vertical-align: top;">267<br>
+            </td>
+            <td style="vertical-aligh: top;">T 8.2<br>
+            </td>
+        </tr>
+    </tbody>
+</table>
+<!-- HallButtonControl End -->
 
+<h2>DriveControl</h2>
+Author Name:&nbsp; &lt;He Jiang (jiangh)&gt;<br>
+Traceability peformed by:&nbsp; &lt;Xianle Wang(xianlew)&gt;<br>
+<!--Table for DriveControl Qiang-->
+<table style="width: 400px; height: 100px;" border="1" cellpadding="3" frame="border">
+    <tbody>
+        <tr>
+            <td style="vertical-align: top;">Line Number<br>
+            </td>
+            <td style="vertical-aligh: top;">Transition Number<br>
+            </td>
+        </tr>
+        <tr>
+            <td style="vertical-align: top;">?<br>
+            </td>
+            <td style="vertical-aligh: top;">?<br>
+            </td>
+        </tr>
+        <tr>
+            <td style="vertical-align: top;">?<br>
+            </td>
+            <td style="vertical-aligh: top;">?<br>
+            </td>
+        </tr>
+    </tbody>
+</table>
+<!--DriveControl End-->
 <span style="font-weight: bold;"><br>
 </span>&lt;Fill in the rest of the controllers&gt;<br>
 <br>
