--- a/portfolio/portfolio/traceability/sc_code.html
+++ b/portfolio/portfolio/traceability/sc_code.html
@@ -7,8 +7,12 @@
 <body>
 <h1 style="text-align: center;">18649 - Statechart to Code Traceability<br>
 </h1>
-<hr style="width: 100%; height: 2px;">18649 &lt;semester&gt;<br>
-Group x - Student names and andrewIds<br>
+<hr style="width: 100%; height: 2px;">18649 Fall 2013<br>
+Group 17: <br>
+Xianle Wang/xianlew <br>
+Shen Yu/sheny <br>
+Qiang Zhang/qiangz<br>
+Jiang He/jiangh<br>
 <hr style="width: 100%; height: 2px;">
 This document shows where each transition described in the controller
 statecharts is implemented in the code.<br>
