--- a/portfolio/portfolio/unit_test/unit_test_log.html
+++ b/portfolio/portfolio/unit_test/unit_test_log.html
@@ -8,8 +8,12 @@
 <body>
 <h1 style="text-align: center;">18649 - Unit Test Log<br>
 </h1>
-<hr style="width: 100%; height: 2px;">18649 &lt;semester&gt;<br>
-Group x - Student names and andrewIds<br>
+<hr style="width: 100%; height: 2px;">18649 Fall 2013<br>
+Group 17: <br>
+Xianle Wang/xianlew <br>
+Shen Yu/sheny <br>
+Qiang Zhang/qiangz<br>
+Jiang He/jiangh<br>
 <hr style="width: 100%; height: 2px;">
 <h2>Unit Test Status</h2>
 The table describes the unit
@@ -44,22 +48,16 @@ include all information listed in the project handouts.<br>
       </td>
       <td style="vertical-align: top;"><a href="doorcontrol.cf">doorcontrol.cf</a></td>
       <td style="vertical-align: top;"><a href="doorcontrol_test1.mf">doorcontrol_test1.mf</a></td>
-      <td style="vertical-align: top;">State numbers /
-transition numbers<br>
+      <td style="vertical-align: top;">State numbers 4 / Transition numbers 6<br>
       </td>
-      <td style="vertical-align: top;">X<br>
+      <td style="vertical-align: top;">13<br>
       </td>
-      <td style="vertical-align: top;">X<br>
+      <td style="vertical-align: top;">0<br>
       </td>
-      <td style="vertical-align: top;"><a href="doorcontrol_test1.stats">doorcontrol_test1.stats</a><br>
+      <td style="vertical-align: top;">
+          <a href="doorcontrol_test1.stats">doorcontrol_test1.stats</a><br>
       </td>
-      <td style="vertical-align: top;">If you failed the test (one or
-more failed assertions), list the
-source of the failure:
-whether the test is buggy, the implementation is wrong, or the design
-is flawed. If the error is in the implementation, give the file name
-and line number, and then trace the source of the failure. This must
-also be recorded in your defect tracking. </td>
+      <td style="vertical-align: top;">All passed </td>
     </tr>
     <tr>
       <td style="vertical-align: top;">HallButtonControl<br>
