--- a/portfolio/portfolio/integration_test/integration_test_log.html
+++ b/portfolio/portfolio/integration_test/integration_test_log.html
@@ -38,22 +38,17 @@ sure to include all information listed in the project handouts.<br>
       </td>
     </tr>
     <tr>
-      <td style="vertical-align: top;">SD 1A.1<br>
+      <td style="vertical-align: top;">SD 1B<br>
       </td>
-      <td style="vertical-align: top;"><a href="sd1a1.cf">sd1a1.cf</a><br>
+      <td style="vertical-align: top;"><a href="sd1b.cf">sd1b.cf</a><br>
       </td>
-      <td style="vertical-align: top;"><a href="sd1a1.mf">sd1a1.mf</a></td>
-      <td style="vertical-align: top;">X<br>
+      <td style="vertical-align: top;"><a href="sd1b.mf">sd1b.mf</a></td>
+      <td style="vertical-align: top;">15<br>
       </td>
-      <td style="vertical-align: top;">X<br>
+      <td style="vertical-align: top;">0<br>
       </td>
-      <td style="vertical-align: top;"><a href="sd1a1.stats">sd1a1.stats</a></td>
-      <td style="vertical-align: top;">If your test failed (one or more
-failed assertions), list the
-source of the failure (the
-test file itself, the code, or the design): give the file name, line
-number, and trace the source of the failure. This must also be recorded
-in your defect tracking. </td>
+      <td style="vertical-align: top;"><a href="sd1b.stats">sd1b.stats</a></td>
+      <td style="vertical-align: top;">All Passed</td>
     </tr>
     <tr>
       <td style="vertical-align: top;">...<br>
@@ -68,7 +63,12 @@ in your defect tracking. </td>
       </td>
       <td style="vertical-align: top;"><br>
       </td>
-      <td style="vertical-align: top;"><br>
+      <td style="vertical-align: top;">If your test failed (one or more
+failed assertions), list the
+source of the failure (the
+test file itself, the code, or the design): give the file name, line
+number, and trace the source of the failure. This must also be recorded
+in your defect tracking. <br>
       </td>
     </tr>
     <tr>
