--- a/portfolio/portfolio/unit_test/unit_test_log.html
+++ b/portfolio/portfolio/unit_test/unit_test_log.html
@@ -64,22 +64,16 @@ include all information listed in the project handouts.<br>
       </td>
       <td style="vertical-align: top;"><a href="hallbuttoncontrol.cf">hallbuttoncontrol.cf</a></td>
       <td style="vertical-align: top;"><a href="hallbuttoncontrol_test1.mf">hallbuttoncontrol_test1.mf</a></td>
-      <td style="vertical-align: top;">State numbers /
-transition numbers<br>
+      <td style="vertical-align: top;">State numbers 2/
+transition numbers 2<br>
       </td>
-      <td style="vertical-align: top;">X<br>
+      <td style="vertical-align: top;">12<br>
       </td>
-      <td style="vertical-align: top;">X<br>
+      <td style="vertical-align: top;">0<br>
       </td>
       <td style="vertical-align: top;"><a href="hallbuttoncontrol_test1.stats">hallbuttoncontrol_test1.stats</a><br>
       </td>
-      <td style="vertical-align: top;">If you failed the test (one or
-more failed assertions), list the
-source of the failure:
-whether the test is buggy, the implementation is wrong, or the design
-is flawed. If the error is in the implementation, give the file name
-and line number, and then trace the source of the failure. This must
-also be recorded in your defect tracking. </td>
+      <td style="vertical-align: top;">All Passed </td>
     </tr>
     <tr>
       <td style="vertical-align: top;">DriveControl<br>
