--- a/portfolio/portfolio/elevatorcontrol/package.html
+++ b/portfolio/portfolio/elevatorcontrol/package.html
@@ -7,8 +7,8 @@
 <body>
 <h1 style="text-align: center;">18649 - Elevator Control Package<br>
 </h1>
-<hr style="width: 100%; height: 2px;">18649 &lt;semester&gt;<br>
-Group x - Student names and andrewIds<br>
+<hr style="width: 100%; height: 2px;">18649 2013-Fall;<br>
+Group 17 - Xianle Wang (xianlew), Shen Yu (sheny), Qiang Zhang (qiangz), Jiang He (jiangh)<br>
 <hr style="width: 100%; height: 2px;">This page lists and describes the
 java files in your elevatorcontrol package.&nbsp; Update this document
 to reflect your implementation and add your java files to the
@@ -20,8 +20,10 @@ elevatorcontrol package (overwriting any duplicates) of a clean version
 of the latest required simulator release.</span><br>
 <h2>Controller files</h2>
 <ul>
-  <li><a href="filename.java">Filename.java</a> - add a description and
-update the filename link</li>
+  <li><a href="HallButtonControl.java">HallButtonControl.java</a> - the controller for HallButton</li>
+  <li><a href="CarButtonControl.java">CarButtonControl.java</a> - the controller for CarButton</li>
+  <li><a href="DriveControl.java">DriveControl.java</a> - the controller for Drive</li>
+  <li><a href="DoorControl.java">DoorControl.java</a> - the controller for Door</li>
   <li>...</li>
 </ul>
 <h2>Translator files</h2>
