--- a/portfolio/portfolio/unit_test/unit_test_log.html
+++ b/portfolio/portfolio/unit_test/unit_test_log.html
@@ -80,22 +80,16 @@ transition numbers 2<br>
       </td>
       <td style="vertical-align: top;"><a href="drivecontrol.cf">drivecontrol.cf</a></td>
       <td style="vertical-align: top;"><a href="drivecontrol_test1.mf">drivecontrol_test1.mf</a></td>
-      <td style="vertical-align: top;">State numbers /
-transition numbers<br>
+      <td style="vertical-align: top;">State numbers 2/
+transition numbers 2<br>
       </td>
-      <td style="vertical-align: top;">X<br>
+      <td style="vertical-align: top;">15<br>
       </td>
-      <td style="vertical-align: top;">X<br>
+      <td style="vertical-align: top;">0<br>
       </td>
       <td style="vertical-align: top;"><a href="drivecontrol_test1.stats">drivecontrol_test1.stats</a><br>
       </td>
-      <td style="vertical-align: top;">If you failed the test (one or
-more failed assertions), list the
-source of the failure:
-whether the test is buggy, the implementation is wrong, or the design
-is flawed. If the error is in the implementation, give the file name
-and line number, and then trace the source of the failure. This must
-also be recorded in your defect tracking. </td>
+      <td style="vertical-align: top;">All Passed</td>
     </tr>
     <tr>
       <td style="vertical-align: top;">CarButtonControl<br>
