--- a/portfolio/portfolio/traceability/sc_code.html
+++ b/portfolio/portfolio/traceability/sc_code.html
@@ -109,15 +109,15 @@ Traceability peformed by:&nbsp; &lt;Xianle Wang (xianlew)&gt;<br>
             </td>
         </tr>
         <tr>
-            <td style="vertical-align: top;">?<br>
+            <td style="vertical-align: top;">286<br>
             </td>
-            <td style="vertical-aligh: top;">?<br>
+            <td style="vertical-aligh: top;">T 6.1<br>
             </td>
         </tr>
         <tr>
-            <td style="vertical-align: top;">?<br>
+            <td style="vertical-align: top;">312<br>
             </td>
-            <td style="vertical-aligh: top;">?<br>
+            <td style="vertical-aligh: top;">T 6.2<br>
             </td>
         </tr>
     </tbody>
