integrated test qiang

--- a/portfolio/portfolio/integration_test/integration_test_log.html
+++ b/portfolio/portfolio/integration_test/integration_test_log.html
@@ -51,24 +51,19 @@ sure to include all information listed in the project handouts.<br>
       <td style="vertical-align: top;">All Passed</td>
     </tr>
     <tr>
-      <td style="vertical-align: top;">...<br>
+      <td style="vertical-align: top;">SD 7B<br>
       </td>
-      <td style="vertical-align: top;"><br>
+      <td style="vertical-align: top;"><a href="sd7b.cf">sd7b.cf</a><br>
       </td>
-      <td style="vertical-align: top;"><br>
+      <td style="vertical-align: top;"><a href="sd7b.mf">sd7b.mf<br>
       </td>
-      <td style="vertical-align: top;"><br>
+      <td style="vertical-align: top;">11<br>
       </td>
-      <td style="vertical-align: top;"><br>
+      <td style="vertical-align: top;">0<br>
       </td>
-      <td style="vertical-align: top;"><br>
+      <td style="vertical-align: top;"><a href="sd7b.stats">sd7b.stats<br>
       </td>
-      <td style="vertical-align: top;">If your test failed (one or more
-failed assertions), list the
-source of the failure (the
-test file itself, the code, or the design): give the file name, line
-number, and trace the source of the failure. This must also be recorded
-in your defect tracking. <br>
+      <td style="vertical-align: top;">All Passed<br>
       </td>
     </tr>
     <tr>
