--- a/portfolio/portfolio/reqs/requirements2.html
+++ b/portfolio/portfolio/reqs/requirements2.html
@@ -2944,6 +2944,12 @@
                     <td style="vertical-align: top;">mDoorClosed [b, r]&larr; False AND mAtFloor.f &larr;mDesiredFloor<br>
                     </td>
                 </tr>
+                <tr>
+                    <td style="vertical-align: top;">T11.3<br>
+                    </td>
+                    <td style="vertical-align: top;">mDoorClosed [b, r]&larr; true AND mAtFloor.f &larr;1<br>
+                    </td>
+                </tr>
             </tbody >
         </table>
         <h3>Requirements to Statechart Traceability</h3>
@@ -3067,6 +3073,26 @@
                     </td>
                     <td style="vertical-align: top;">X<br>
                     </td>
+                    <td style="vertical-align: top;"><br>
+                    </td>
+                    <td style="vertical-align: top;"><br>
+                    </td>
+                    <td style="vertical-align: top;"><br>
+                    </td>
+                     <td style="vertical-align: top;"><br>
+                    </td>
+                    <td style="vertical-align: top;">X<br>
+                    </td>
+                    <td style="vertical-align: top;">X<br>
+                    </td>
+                </tr>
+                <tr>
+                    <td style="vertical-align: top;">T11.3 <br>
+                    </td>
+                    <td style="vertical-align: top;"><br>
+                    </td>
+                    <td style="vertical-align: top;"><br>
+                    </td>
                     <td style="vertical-align: top;">X<br>
                     </td>
                     <td style="vertical-align: top;">X<br>
@@ -3075,7 +3101,7 @@
                     </td>
                      <td style="vertical-align: top;"><br>
                     </td>
-                    <td style="vertical-align: top;">X<br>
+                    <td style="vertical-align: top;"><br>
                     </td>
                     <td style="vertical-align: top;">X<br>
                     </td>
